@@ -20,6 +20,7 @@ Others:
 - Fix sync hanging on gopher interactive prompt (by JMCS)
 - Fix crash when trying to parse HTML without BS4 (reported by Hoël Bézier)
 - Automatically replace space by %20 in img url in HTML
+- Ansicat: HTML Render img with data-src if src doesn’t link to a valid image
 
 ## 2.8 - November 13th 2025
 - New option "images_size" to use with "set" (idea by aelius)
